# SST-MetaxPyTorch-Hackathon

./: .gitignore  CLAUDE.md  Dockerfile  FRONTEND_API.md  HANDOFF.md  MECHANICS.md  README.md  TEAMMATES.md  boardsim_local.py  requirements.txt
.claude/skills/openenv-hackathon/: SKILL.md
.claude/skills/openenv-hackathon/reference/: 01-openenv-framework.md  02-training-pipeline.md  03-submission-checklist.md  04-judging-rubric-playbook.md  05-theme-selection.md
assets/: baseline.csv
envs/board_sim_env/: .dockerignore  README.md  __init__.py  client.py  debug_sim.py  models.py  openenv.yaml  pyproject.toml
envs/board_sim_env/server/: Dockerfile  __init__.py  app.py  board_sim_env_environment.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentDecision.jsx  EndScreen.jsx  EventBanner.jsx  HistoryTimeline.jsx  MetricsPanel.jsx  NPCGrid.jsx  PlaybackControls.jsx  TopBar.jsx  TrustPanel.jsx  VoteTally.jsx
frontend/src/hooks/: useAgentLoop.js  useGameStore.js
frontend/src/services/: api.js
notebooks/: train_grpo.ipynb  train_grpo_v2.ipynb
scratch/: debug_sim.py
scripts/: _patch_notebook.py  random_baseline.py  test_client.py  test_server.py
